manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: minio
spec:
  containers:
  - name: nginx
    image: nginx
