manifests/clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
spec:
  selector:
    app: nginx-cip
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-cip
  template:
    metadata:
      labels:
        app: nginx-cip
    spec:
      containers:
        - name: nginx-cip
          image: nginx:latest
          ports:
            - containerPort: 80
