manifests/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  selector:
    app: nginx-np
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-np
  template:
    metadata:
      labels:
        app: nginx-np
    spec:
      containers:
        - name: nginx-np
          image: nginx:latest
          ports:
            - containerPort: 80
